test/elaboration/bad/coreml_letrec.mle
let rec
(f : int -> int) = fun (x : int) -> g[] x[]
and
(g : int -> int) = fun (x : int) -> f[] 42 ()